# parkiet

./: .env.example  .gitignore  LICENSE  MODEL_LICENSE  README.md  TRAINING.md  chunks_dataset.test.parquet  config.test.json  config.tiny.json  docker-compose.test.yml  docker-compose.yml  env.example  init.sql  list_bucket_mp3s.py  mokumai.code-workspace  pyproject.toml  show_clean_transcripts.py  start_training.sh  test.txt  tpu_manager.py
audioprep/: README.md  pyproject.toml
audioprep/src/: chunker.py  download_podcasts.py  parel_radio_scraper.py  schemas.py  transcribe.py  viewer.py
audioprep/src/generator/: chunker.py  schemas.py  transcriber.py
audioprep/src/utils/: audio.py  speaker.py
collector/: README.md  package-lock.json  package.json  pyproject.toml  test_preprocess.py
collector/src/: chonker.py  download_podcasts.py  parel_radio_scraper.py  preprocess_audio.py  sampler.py  schemas.py  viewer.py
collector/src/templates/: index.html
parkiet/: .gitignore  README.md  config.pruned.json  config.test.json  pyproject.toml
parkiet/src/parkiet/: dataset.py  inference.py  test_dataset.py  train.py
parkiet/src/parkiet/audioprep/: arrow_writer.py  chunker.py  schemas.py
parkiet/src/parkiet/dia/: layers.py  model.py  state.py
parkiet/src/parkiet/dia/training/: state.py
parkiet/src/parkiet/jax/: layers.py  model.py  state.py
parkiet/src/parkiet/torch/: dataset.py
parkiet/test/: hello_world.txt
parkiet/tests/: test_jax_conversion.py
samples/: clone.m4a  hello_world.txt
scripts/: start_workers.py
src/parkiet/: convert_hf.py  convert_single_shard.py  convert_to_jax.py  convert_to_torch.py  convert_vibevoice.py
src/parkiet/audioprep/: arrow_viewer.py  arrow_writer.py  batch_transcriber.py  chunk_extractor.py  chunker.py  queue.py  queue_files.py  scan_bucket_files.py  schemas.py  speaker_extractor.py  transcriber.py
src/parkiet/database/: __init__.py  audio_store.py  connection.py  redis_connection.py
src/parkiet/dia/: audio.py  config.py  hf.py  inference.py  inference_hf.py  layers.py  model.py  state.py
src/parkiet/dia/training/: state.py
src/parkiet/jax/: audio.py  dataset.py  inference.py  layers.py  model.py  state.py  tensorboard_logger.py  train.py  train_distributed.py  training_state.py
src/parkiet/storage/: __init__.py  gcs_client.py
src/parkiet/torch/: dataset.py  train.py
src/parkiet/utils/: audio.py
tests/: conftest.py  test_jax_conversion.py  test_speaker_similarity.py
training/: .gitignore  README.md  config.json  pyproject.toml
training/src/: dataset.py  test_train.py  train.py
training/src/dia/: audio.py  config.py  layers.py  model.py
whisper-nl/: .gitignore  README.md  pyproject.toml
whisper-nl/src/: cgn_inspector.py  config.py  dataset_loader.py  evaluate_checkpoints.py  inference.py  prepare_data.py  print_suppress_tokens.py  resume_training.py  text_normalizer.py  train_configurable.py
whisper-nl/src/utils/: audio.py
