[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "descript-audio-codec>=1.0.0",
    "gradio>=5.25.2",
    "huggingface-hub>=0.30.2",
    "numpy>=2.2.4",
    "pydantic>=2.11.3",
    "safetensors>=0.5.3",
    "soundfile>=0.13.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "triton==3.2.0 ; sys_platform == 'linux'",
    "triton-windows==3.2.0.post18 ; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ninja>=1.11.1.4",
    "packaging>=25.0",
]
